--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "embla-carousel-react": "^8.3.1",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "lucide-react": "^0.454.0",
     "next": "^15.0.3",
     "react": "19.0.0-rc-02c0e824-20241028",
