--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@dnd-kit/core": "^6.2.0",
+    "@dnd-kit/modifiers": "^8.0.0",
+    "@dnd-kit/utilities": "^3.2.2",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/resource-timeline": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@radix-ui/react-avatar": "^1.1.1",
+    "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-collapsible": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
@@ -18,28 +26,41 @@
     "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-tabs": "^1.1.1",
+    "@radix-ui/react-toast": "^1.2.2",
     "@radix-ui/react-tooltip": "^1.1.3",
+    "@tanstack/react-query": "^5.61.5",
+    "add": "^2.0.6",
+    "axios": "^1.7.8",
+    "browser-image-compression": "^2.0.2",
+    "calendar": "^0.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^16.4.7",
     "embla-carousel-react": "^8.3.1",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.2.1",
+    "formik": "^2.4.6",
     "framer-motion": "^11.11.17",
-    "lucide-react": "^0.454.0",   
+    "lucide-react": "^0.454.0",
+    "next": "^15.0.3",
+    "openai": "^4.76.1",
+    "react": "^18.0.2",
     "react-animated-numbers": "^0.18.0",
     "react-awesome-shapes": "^0.1.6",
     "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.1",
+    "react-dom": "^18.0.2",
+    "react-intersection-observer": "^9.15.1",
+    "react-toastify": "^11.0.2",
     "recharts": "^2.13.3",
+    "shadcn": "^2.3.0",
     "tailwind-merge": "^2.5.4",
-    "tailwindcss-animate": "^1.0.7"
-  },
-  "peerDependencies": {
-  "react": "19.0.0-rc-02c0e824-20241028",
-  "react-dom": "19.0.0-rc-02c0e824-20241028",
-  "next": "^15.0.3"
+    "tailwindcss-animate": "^1.0.7",
+    "toast": "^0.5.4",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^20",
@@ -48,11 +69,12 @@
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.2",
+    "madge": "^8.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
   "overrides": {
-    "react-is": "19.0.0-rc-02c0e824-20241028"
+    "react-is": "^18.0.2"
   }
 }
