--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-toastify": "^11.0.2",
     "recharts": "^2.13.3",
     "shadcn": "^2.3.0",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7",
     "toast": "^0.5.4",
