--- a/package.json
+++ b/package.json
@@ -9,70 +9,72 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@dnd-kit/core": "^6.2.0",
-    "@dnd-kit/modifiers": "^8.0.0",
+    "@dnd-kit/core": "^6.3.1",
+    "@dnd-kit/modifiers": "^9.0.0",
     "@dnd-kit/utilities": "^3.2.2",
-    "@fullcalendar/interaction": "^6.1.15",
-    "@fullcalendar/react": "^6.1.15",
-    "@fullcalendar/resource-timeline": "^6.1.15",
-    "@fullcalendar/timegrid": "^6.1.15",
-    "@radix-ui/react-avatar": "^1.1.1",
-    "@radix-ui/react-checkbox": "^1.1.3",
-    "@radix-ui/react-collapsible": "^1.1.1",
-    "@radix-ui/react-dialog": "^1.1.2",
-    "@radix-ui/react-dropdown-menu": "^2.1.2",
-    "@radix-ui/react-label": "^2.1.0",
-    "@radix-ui/react-popover": "^1.1.2",
-    "@radix-ui/react-select": "^2.1.2",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@radix-ui/react-slot": "^1.1.0",
-    "@radix-ui/react-switch": "^1.1.1",
-    "@radix-ui/react-tabs": "^1.1.1",
-    "@radix-ui/react-toast": "^1.2.2",
-    "@radix-ui/react-tooltip": "^1.1.3",
-    "@tanstack/react-query": "^5.61.5",
+    "@fullcalendar/interaction": "^6.1.18",
+    "@fullcalendar/react": "^6.1.18",
+    "@fullcalendar/resource-timeline": "^6.1.18",
+    "@fullcalendar/timegrid": "^6.1.18",
+    "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-checkbox": "^1.3.2",
+    "@radix-ui/react-collapsible": "^1.1.11",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-label": "^2.1.7",
+    "@radix-ui/react-popover": "^1.1.14",
+    "@radix-ui/react-select": "^2.2.5",
+    "@radix-ui/react-separator": "^1.1.7",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-switch": "^1.2.5",
+    "@radix-ui/react-tabs": "^1.1.12",
+    "@radix-ui/react-toast": "^1.2.14",
+    "@radix-ui/react-tooltip": "^1.2.7",
+    "@tailwindcss/postcss": "^4.1.11",
+    "@tanstack/react-query": "^5.84.2",
     "add": "^2.0.6",
-    "axios": "^1.8.2",
+    "autoprefixer": "^10.4.21",
+    "axios": "^1.11.0",
     "browser-image-compression": "^2.0.2",
     "calendar": "^0.1.1",
-    "class-variance-authority": "^0.7.0",
+    "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
-    "dotenv": "^16.4.7",
-    "embla-carousel-react": "^8.3.1",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
+    "dotenv": "^17.2.1",
+    "embla-carousel-react": "^8.6.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
     "formik": "^2.4.6",
-    "framer-motion": "^11.11.17",
-    "lucide-react": "^0.454.0",
-    "next": "^15.0.3",
-    "openai": "^4.76.1",
-    "react": "^18.0.2",
-    "react-animated-numbers": "^0.18.0",
-    "react-awesome-shapes": "^0.1.6",
+    "framer-motion": "^12.23.12",
+    "lucide-react": "^0.539.0",
+    "next": "^15.4.6",
+    "openai": "^5.12.2",
+    "react": "^19.1.1",
+    "react-animated-numbers": "^1.1.1",
+    "react-awesome-shapes": "^0.1.12",
     "react-beautiful-dnd": "^13.1.1",
-    "react-day-picker": "^8.10.1",
-    "react-dom": "^18.0.2",
-    "react-intersection-observer": "^9.15.1",
-    "react-toastify": "^11.0.2",
-    "recharts": "^2.13.3",
-    "shadcn": "^2.3.0",
+    "react-day-picker": "^9.8.1",
+    "react-dom": "^19.1.1",
+    "react-intersection-observer": "^9.16.0",
+    "react-toastify": "^11.0.5",
+    "recharts": "^3.1.2",
+    "shadcn": "^2.10.0",
     "socket.io-client": "^4.8.1",
-    "tailwind-merge": "^2.5.4",
+    "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "toast": "^0.5.4",
-    "yup": "^1.4.0"
+    "yup": "^1.7.0"
   },
   "devDependencies": {
-    "@types/node": "^20",
-    "@types/react": "^18",
+    "@types/node": "^24",
+    "@types/react": "^19",
     "@types/react-beautiful-dnd": "^13.1.8",
-    "@types/react-dom": "^18",
-    "eslint": "^8",
-    "eslint-config-next": "15.0.2",
+    "@types/react-dom": "^19",
+    "eslint": "^9",
+    "eslint-config-next": "15.4.6",
     "madge": "^8.0.0",
-    "postcss": "^8",
-    "tailwindcss": "^3.4.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^4.1.11",
     "typescript": "^5"
   },
   "overrides": {
